--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.assignment2"
+        applicationId "com.example.money_manager"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
